syntax = "proto3";

package zones;

service ZonesService {
    rpc findAll (Empty) returns (Zones);
    rpc create (inputCreateZone) return (google.protobuf.BoolValue)
}

message Empty {}

message Zones {
    int32 id = 1;
    string name = 2;
    int32 cantEstacionamientosTotales = 3;
    int32 cantEstacionamientosOcupados = 4;
}

message inputCreateZone {
    string name = 1;
    int32 cantEstacionamientosTotales = 2;
    int32 cantEstacionamientosOcupados = 3;
}